new file:   back-end/actions/add.php 	new file:   back-end/db/db.php 	renamed:    css/input.css -> front-end/css/input.css 	new file:   front-end/dist/mainCss.css 	renamed:    dist/output.css -> front-end/dist/output.css 	new file:   front-end/html/index.html 	renamed:    html/profile.html -> front-end/html/profile.html 	renamed:    js/fotos.js -> front-end/js/fotos.js 	new file:   front-end/js/navbar.js 	new file:   front-end/pages/addPost.php 	new file:   front-end/pages/posts.php 	renamed:    profile.php -> front-end/pages/profile.php 	new file:   front-end/template/footer.php 	new file:   front-end/template/header.php 	deleted:    html/index.html 	modified:   index.php

--- a/front-end/css/input.css
+++ b/front-end/css/input.css
@@ -44,10 +44,10 @@
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: rgb(236 72 153);
+    background: rgb(159, 236, 72);
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: rgb(190 24 93);
+    background: rgb(159, 236, 72);
   }
