say hello to the login page 	modified:   front-end/css/input.css 	modified:   front-end/dist/output.css 	new file:   front-end/pages/login.php 	modified:   tailwind.config.js

--- a/front-end/css/input.css
+++ b/front-end/css/input.css
@@ -23,6 +23,15 @@
     color: black;
 }
 
+footer > a{
+  text-decoration-line: none;
+}
+
+footer > a:hover{
+  text-decoration: underline;
+  font-weight: bold;
+}
+
 /* individual items */
 
 #navbar > * {
