database changed, working on messages and small changes

--- a/front-end/css/messages.css
+++ b/front-end/css/messages.css
@@ -11,6 +11,19 @@ article.header input{
     text-align: center;
 }
 
+.top-section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.top-section>div{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
 article.main{
     margin-top: 30px;
     width: 100%;
@@ -23,10 +36,10 @@ article.main section{
     max-height: 70px;
 }
 article.main section.not-seen{
-    background-color: rgba(218, 218, 218, 0.856);
+    background-color: rgb(255 255 255 / 76%);
 }
 article.main section.seen{
-    background-color: rgba(189, 189, 189, 0.616);
+    background-color: rgb(151 151 151 / 53%)
 }
 article.main section .left{
     float: left;
@@ -35,7 +48,7 @@ article.main section .left{
 }
 article.main section .right{
     float: right;
-    width: 20%;
+    width: 90%;
 }
 article.main section .user_image img{
     height: 100%;
