--- a/front-end/css/messages.css
+++ b/front-end/css/messages.css
@@ -25,42 +25,108 @@ article.header input{
 }
 
 article.main{
-    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
-    height: 100%;
+    margin-top: 30px;
+    min-height: 70vh;
+    overflow: auto;
+}
+.messages-container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.messages-container-not-seen{
+    width: fit-content;
+    margin-right: 10px;
+    max-width: 720px;
+    max-height: 78vh;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    overflow: auto;
+    border-radius: 6px;
+    background: var(--sidebar-color);
+}
+.messages-container-seen{
+    width: fit-content;
+    margin-right: 10px;
+    max-width: 720px;
+    max-height: 78vh;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    overflow: auto;
+    border-radius: 6px;
+    background: var(--sidebar-color);  
 }
 article.main section{
     display: block;
+    overflow: hidden;
     width: 100%;
     height: 100%;
-    max-height: 70px;
+    max-height: 110px;
+    max-width: 1200px;
+    min-width: 700px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 6px;
 }
 article.main section.not-seen{
-    background-color: rgb(255 255 255 / 76%);
+    background-color: rgb(235 235 235 / 80%);
 }
 article.main section.seen{
-    background-color: rgb(151 151 151 / 53%)
+    background-color: rgb(99 99 99 / 53%);
 }
 article.main section .left{
     float: left;
-    width: 10%;
+    width: fit-content;
+    min-width: 20%;
     overflow: hidden;
     clear: left;
+    margin-right: 20px;
 }
 article.main section .middle{
     float: left;
-    width: 80%;
+    width: 50%;
 }
 article.main section .right{
+    display: flex;
     float: right;
-    width: 10%;
+    width: 20%;
+    justify-content: center;
 }
 article.main section .user_image img{
     height: 100%;
     max-height: 70px;
-    width: auto;
+    width: 100%;
 }
 div#NoShow{
     opacity: 0;
     display: none;
 }
+
+div[class*="userName"]{
+    font-weight: bold;
+    font-size: 0.8em;
+    text-align: center;
+}
+div[class*="subject"]{
+    font-weight: bold;
+}
+input[id*="readButton"]{
+    margin: 0 !important;
+    margin-top: 5px !important;
+}
+div[class*="userMessage"]{
+    overflow: auto;
+    max-height: 70px;
+}
+
+@media only screen and (max-width: 1560px) {
+    .messages-container-seen{
+        margin-top: 10px;
+    }
+  }
