--- a/front-end/css/header.css
+++ b/front-end/css/header.css
@@ -19,6 +19,45 @@ button, input, optgroup, select, textarea {
     margin: 0;
     padding: 0;
 }
+  .grid {
+    display: grid;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
+  .h-40 {
+    height: 10rem;
+  }
+  
+  .h-6 {
+    height: 1.5rem;
+  }
+  
+  .h-full {
+    height: 100%;
+  }
+  
+  .h-screen {
+    height: 100vh;
+  }
+  
+  .w-1\/2 {
+    width: 50%;
+  }
+  
+  .w-40 {
+    width: 10rem;
+  }
+  
+  .w-6 {
+    width: 1.5rem;
+  }
+  
+  .w-full {
+    width: 100%;
+  }
 ::-webkit-scrollbar-track {
     background: #1E293B;
 }
