--- a/front-end/css/grid-gallery.css
+++ b/front-end/css/grid-gallery.css
@@ -2,10 +2,13 @@
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(200px, auto);
+  grid-auto-rows: minmax(150px, auto);
   gap: 20px;
   padding: 20px;
   grid-auto-flow: dense;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
 
 img {
@@ -18,12 +21,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  
-
   background-color: #282c34;
   border-radius: 4px;
   transition: transform 0.3s ease-in-out;
-
+  height: 150px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -44,6 +45,13 @@ img {
 .postCaption{
   mix-blend-mode: difference;
   color: white;
+}
+.more-post {
+  color: black !important;
+  height: 30px;
+  font-size: 0.8em !important;
+  font-weight: bold !important;
+  background-color: white !important;
 }
 
 @media (min-width: 600px) {
