Edit user data implemeted

--- a/front-end/css/profile.css
+++ b/front-end/css/profile.css
@@ -1,3 +1,12 @@
+.userHeader{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.userHeader div {
+    display: flex;
+    flex-direction: row;
+}
 .buttons {
     display: flex;
     justify-content: space-between;
