--- a/front-end/css/morePost.css
+++ b/front-end/css/morePost.css
@@ -93,6 +93,9 @@ div[class*="column"]{
     margin-bottom: 5px;
     padding: 7px;
 }
+.comments-info:hover{
+    background-color: rgb(0,0,0,0.3);
+}
 .comment-form{
     display: flex;
     justify-content: space-between;
@@ -132,6 +135,6 @@ div[class*="column"]{
 @media only screen and (max-width: 1280px) {
     .comments{
         overflow: auto;
-        max-height: 260px;
+        max-height: 265px;
     }
 }
